added morse trainer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 
     </head>
     <body>
-        <h1>HI</h1>
+        <h1>Links</h1>
+        <ul>
+            <li><a href="./morseTrainer/index.html">Morse Code Trainer</a></li>
+        </ul>
         <script src="index.js"></script>
     </body>
 </html>
