added backspace to list of hotkeys

--- a/morseTrainer/index.html
+++ b/morseTrainer/index.html
@@ -91,6 +91,7 @@
         <kbd>RShift</kbd> = space<br><br>
         <kbd>Enter</kbd> = submit<br><br>
         <kbd>Space</kbd> = skip word<br><br>
+        <kbd>Backspace</kbd> = delete last character<br><br>
     </section>
     
     <script src="./index.js"></script>
