added website info

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 
     </head>
     <body>
-        <h1>Links</h1>
+        <h1>KLZX121's Website</h1>
+        <p>
+            This website is mainly for my own use so I have spent 0 effort in making anything look remotely good.
+        </p>
+        <h3>Links</h3>
         <ul>
             <li><a href="./morseTrainer/index.html">Morse Code Trainer</a></li>
         </ul>
