space key now inputs dots or dashes depending on length of press

--- a/morseTrainer/index.html
+++ b/morseTrainer/index.html
@@ -126,11 +126,12 @@
     <section><strong>Translation: </strong><span id="showInput" class="big"></span><span id="cursorDash" style="display: inline;" class="big">|</span></section>
     <section>
         <strong>Hotkeys:</strong><br><br>
+        <kbd>Space</kbd> = short press ( dot · ) / long press ( dash − )<br><br>
         <kbd>.</kbd> = dot ( · )<br><br>
         <kbd>/</kbd> = dash ( − )<br><br>
         <kbd>RShift</kbd> = space<br><br>
         <kbd>Enter</kbd> = submit<br><br>
-        <kbd>Space</kbd> = skip word<br><br>
+        <kbd>S</kbd> = skip word<br><br>
         <kbd>Backspace</kbd> = delete last character<br><br>
     </section>
     
