--- a/morseTrainer/index.html
+++ b/morseTrainer/index.html
@@ -131,7 +131,7 @@
         <kbd>/</kbd> = dash ( − )<br><br>
         <kbd>RShift</kbd> = space<br><br>
         <kbd>Enter</kbd> = submit<br><br>
-        <kbd>S</kbd> = skip word<br><br>
+        <kbd>LControl</kbd> = skip word<br><br>
         <kbd>Backspace</kbd> = delete last character<br><br>
     </section>
     
