added 'type here' placeholder

--- a/morseTrainer/index.html
+++ b/morseTrainer/index.html
@@ -61,6 +61,7 @@
     <section>
         <strong>Translation: </strong>
         <div id="inputBox">
+            <span id="inputPlaceholder" style="display: inline">Type Here</span>
             <span id="showInput" class="big prewhitespace bold"></span>
             <span id="cursorDash" style="display: inline;" class="big"></span>
         </div>
