edited instructions a bit more

--- a/morseTrainer/index.html
+++ b/morseTrainer/index.html
@@ -45,7 +45,7 @@
     </section>
 
     <section id="lastAnswerSection">
-        <div><strong>Previous word: </strong></div><br>
+        <div><strong>Previous phrase: </strong></div><br>
         <div class="bold">
             <span id="lastWord" class="big"></span>
             <br>
@@ -82,13 +82,15 @@
     <section>
         <strong>Instructions:</strong>
         <p>
-            Tap or hold the space key to input dots or dashes respectively when translating English to Morse, or type out the English letters when translating Morse to English.
+            Tap or hold the <kbd>Space</kbd> key to input dots or dashes respectively when translating English to Morse, or type out the English letters when translating Morse to English.
             <br>
-            Translate the word in the <strong>Phrase</strong> section.
+            The <strong>Phrase</strong> section displays the current phrase which you have to translate.
             <br>
-            See the previous word and correct translation, along with your answer and translation, in the <strong>Previous word</strong> and <strong>Your answer</strong> section.
+            The <strong>Previous phrase</strong> section shows the previous given phrase and its correct translation.
             <br>
-            View your total score in the <strong>Score</strong> section.
+            The <strong>Your answer</strong> section shows your answer and its translation.
+            <br>
+            The <strong>Score</strong> section shows your total record.
         </p>
     </section>
     
