fixed upper case words affecting translation

--- a/morseTrainer/index.html
+++ b/morseTrainer/index.html
@@ -84,6 +84,8 @@
         <p>
             Tap or hold the <kbd>Space</kbd> key to input dots or dashes respectively when translating English to Morse, or type out the English letters when translating Morse to English.
             <br>
+            Press <kbd>Enter</kbd> to submit your translation.
+            <br>
             The <strong>Phrase</strong> section displays the current phrase which you have to translate.
             <br>
             The <strong>Previous phrase</strong> section shows the previous given phrase and its correct translation.
