--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <style>
             * {
-                color: white;
+                color: rgb(224, 224, 224);
             }
             body {
                 text-align: center;
@@ -18,9 +18,6 @@
             a {
                 text-decoration: none;
             }
-            a:hover {
-                text-decoration: underline;
-            }
             li {
                 list-style: inside none;
             }
@@ -31,7 +28,7 @@
                 text-align: center;
                 display: flex;
                 flex-wrap: wrap;
-                margin-bottom: 10em;
+                margin-bottom: 1em;
             }
             .card {
                 width: 200px;
@@ -42,30 +39,42 @@
 
                 backdrop-filter: blur(5px);
             }
-            .intro {
-                margin-bottom: 10%;
+            .linka:hover {
+                text-decoration: underline;
+            }
+            .listLink {
+                background-color: rgba(255, 255, 255, 0.3);
+                padding: 0.5em;
+                border-radius: 0.3em;
+            }
+            .listLink:hover {
+                background-color: rgba(150, 150, 150, 0.3);
+            }
+            li {
+                margin-bottom: 2em;
             }
         </style>
     </head>
     <body>
-        <h1 class="intro">KLZX121's website</h1>
+        <h1 class="intro">KLZX121</h1>
         <div class="card-container">
             <div class="card">
                 <h1>Discord</h1>
                 KLZX121#9414
             </div>
-            <a href="https://github.com/KLZX121"><div class="card">
+            <a href="https://github.com/KLZX121" class="linka"><div class="card">
                 <h1>GitHub</h1>
-                @KLZX121
-            </div></a>
-            <a href="https://www.youtube.com/channel/UCeO4aQUp_scJOAEKtecgnXg"><div class="card">
-                <h1>YouTube</h1>
                 @KLZX121
             </div></a>
         </div>
         <h3>Links</h3>
         <ul>
-            <li><a href="./morseTrainer/index.html">Morse Code Trainer</a></li>
+            <li>
+                <a href="./morseTrainer/index.html"><span class="listLink">Morse Code Trainer</span>
+            </li>
+            <li>
+                <a href="https://klzx121.github.io/cubic-solver/"><span class="listLink">Cubic Equation Solver</span>
+            </li>
         </ul>
         <script src="index.js"></script>
     </body>
