added polynomial grapher

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                 <a href="./morseTrainer/index.html"><span class="listLink">Morse Code Trainer</span>
             </li>
             <li>
+                <a href="https://klzx121.github.io/polynomial-grapher/"><span class="listLink">Polynomial Grapher</span>
+            </li>
+            <li>
                 <a href="https://klzx121.github.io/cubic-solver/"><span class="listLink">Cubic Equation Solver</span>
             </li>
         </ul>
